--- a/EditorWpf/View/MainWindow.xaml
+++ b/EditorWpf/View/MainWindow.xaml
@@ -11,13 +11,17 @@
             <MenuItem Header="File">
                 <MenuItem Header="New Scene">
                     <MenuItem.Icon>
-                        <Image Source="{StaticResource Editor_IconDrawingImage}"/>
+                        <Image Source="{StaticResource Editor_IconDrawingImage}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                     </MenuItem.Icon>
                 </MenuItem>
                 <MenuItem Header="New Project"/>
                 <MenuItem Header="Open Project"/>
                 <MenuItem Header="Open Recent"/>
-                <MenuItem Header="Save Scene"/>
+                <MenuItem Header="Save Scene">
+                    <MenuItem.Icon>
+                        <Image Source="{StaticResource SaveDrawingImage}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    </MenuItem.Icon>
+                </MenuItem>
             </MenuItem>
             <MenuItem Header="Edit">
                 <MenuItem Header="Undo"/>
