added project start screen dialog window

--- a/EditorWpf/View/MainWindow.xaml
+++ b/EditorWpf/View/MainWindow.xaml
@@ -5,7 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Editor"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        WindowStartupLocation="CenterScreen"
+        WindowState="Maximized"
+        Title="Editor" Height="450" Width="800">
     <Grid>
         <Menu>
             <MenuItem Header="File">
