--- a/EditorWpf/View/OpenProject.xaml
+++ b/EditorWpf/View/OpenProject.xaml
@@ -6,7 +6,15 @@
              xmlns:local="clr-namespace:Editor.View"
              mc:Ignorable="d" Width="800"
              d:DesignHeight="450" d:DesignWidth="800">
-    <StackPanel>
-        
+    <StackPanel Background="White">
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+            <ListBox Width="195" Height="250"/>
+            <Border Width="400" Height="250" Margin="5,0,0,0"/>
+        </StackPanel>
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center"
+                    Margin="0,30,0,0">
+            <Button Content="Open" Width="96" IsDefault="True"/>
+            <Button Content="Exit" Width="96" Margin="30,0,0,0" IsCancel="True"/>
+        </StackPanel>
     </StackPanel>
 </UserControl>
